--- a/pandas/chapter2.ipynb
+++ b/pandas/chapter2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
        "[418 rows x 12 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
        " 'Embarked']"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "[418 rows x 2 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "[100 rows x 12 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
        "[100 rows x 12 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "4  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
        "4  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1414,7 @@
        "5     7538   9.2250   NaN        S  "
       ]
      },
-     "execution_count": 187,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1610,7 @@
        "max      9.000000  512.329200  "
       ]
      },
-     "execution_count": 189,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1762,7 +1762,7 @@
        "4  3101298  12.2875   NaN        S  "
       ]
      },
-     "execution_count": 190,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
        "1  47.0      1      0  363272  7.0000   NaN        S  "
       ]
      },
-     "execution_count": 191,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2998,7 +2998,7 @@
        "59      0            PC 17608  262.3750              B61        C  "
       ]
      },
-     "execution_count": 192,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3009,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -3018,7 +3018,7 @@
        "method"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3029,7 +3029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -3163,7 +3163,7 @@
        "417   NaN      1      1                2668   22.3583   NaN        C  "
       ]
      },
-     "execution_count": 194,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3174,7 +3174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -4305,7 +4305,7 @@
        "417      1                2668   22.3583          NaN        C  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4323,7 +4323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -4343,7 +4343,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4355,7 +4355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -4375,7 +4375,7 @@
        "Name: Survived, Length: 418, dtype: int64"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4386,7 +4386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -4397,7 +4397,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4408,7 +4408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -4417,7 +4417,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4440,7 +4440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -4449,7 +4449,7 @@
        "<AxesSubplot: ylabel='Survived'>"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4470,7 +4470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -4479,7 +4479,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4502,7 +4502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -4522,7 +4522,7 @@
        "Name: Pclass, Length: 418, dtype: int64"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4533,7 +4533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -4542,7 +4542,7 @@
        "<AxesSubplot: ylabel='Pclass'>"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4563,7 +4563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -4572,7 +4572,7 @@
        "<AxesSubplot: ylabel='Sex'>"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4593,7 +4593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -4676,7 +4676,7 @@
        "1  47.0      1      0  363272  7.0000   NaN        S  "
       ]
      },
-     "execution_count": 205,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4687,7 +4687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -4696,7 +4696,7 @@
        "418"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4707,7 +4707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -4716,7 +4716,7 @@
        "array(['Q', 'S', 'C'], dtype=object)"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4727,7 +4727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -4736,7 +4736,7 @@
        "169"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4747,14 +4747,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Zeenat jahan\\AppData\\Local\\Temp\\ipykernel_30252\\2423779353.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "C:\\Users\\Zeenat jahan\\AppData\\Local\\Temp\\ipykernel_7388\\2423779353.py:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  df.groupby(\"Survived\")[\"Sex\",\"Pclass\"].value_counts()\n"
      ]
     },
@@ -4771,7 +4771,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4782,7 +4782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -4878,7 +4878,7 @@
        "1        female     44       152  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4889,7 +4889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -4909,7 +4909,7 @@
        "Name: Fare, Length: 418, dtype: float64"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4920,7 +4920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -4929,7 +4929,7 @@
        "35.627188489208635"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4940,7 +4940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -4949,7 +4949,7 @@
        "512.3292"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4960,7 +4960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -4969,7 +4969,7 @@
        "14856.5376"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4980,7 +4980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -4989,7 +4989,7 @@
        "<AxesSubplot: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5012,7 +5012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -5021,7 +5021,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5044,7 +5044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -5053,7 +5053,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5076,7 +5076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -5132,7 +5132,7 @@
        "3        2703.7501"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5143,7 +5143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -5152,7 +5152,7 @@
        "array([<AxesSubplot: ylabel='Fare'>], dtype=object)"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5175,7 +5175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -5184,7 +5184,7 @@
        "<AxesSubplot: xlabel='Pclass'>"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5207,10 +5207,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df[\"Survived\"])"
+   ]
   }
  ],
  "metadata": {
